# minictl

./: Cargo.toml  README.md  minictl.pyi  pyproject.toml
.github/workflows/: CI.yml
python/minictl/: __init__.py  formulas.pyi  modelcheckers.pyi  models.pyi
python/minictl-stubs/: __init__.pyi  models.pyi
python/tests/formulas/: test_ctl.py  test_ltl.py
python/tests/modelcheckers/: test_ctlchecker.py  test_modularctlchecker.py
python/tests/models/: test_model.py  test_state.py
src/: formulas.rs  ispl.rs  lib.rs  modelcheckers.rs  models.rs  parser.rs  pythonutils.rs  satisfies.rs
src/formulas/: ctl_parse.rs  ctl_python.rs  ctl_types.rs  ltl_parse.rs  ltl_python.rs  ltl_types.rs
src/ispl/: kinds.rs  parsererror.rs  tokenizer.rs  tokenset.rs
src/modelcheckers/: ctl_checker.rs  ctl_checker_python.rs  gnba.rs  gnba_python.rs
src/models/: model.rs  models_python.rs
src/satisfies/: ctl_solver.rs
teaching_materials/: lock_protocol.py
testdata/: test.islp
tests/: test_parser.rs
tests/common/: mod.rs
tests/python/modelcheckers/: test_gnba.py
tests/python/models/: test_model.py  test_state.py
