[package]
name = "minictl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minictl"
crate-type = ["lib", "cdylib"]

[features]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.21.2", optional = true }
rowan = "0.15.15"
