[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "minictl"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools.package-data]
your_module = ["py.typed"]

[tool.maturin]
python-source = "python"
features = ["python"]
profile = "release"
